Title text animation

--- a/style.css
+++ b/style.css
@@ -1,16 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-color: black;
   overflow: hidden;
+}
+
+h1 {
+    position: absolute;
+    top: 0;
+    font-size: 2rem;
+    color: black;
+    -webkit-text-stroke: 1px #2e2e2e;
+}
+
+h1::before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    color: #03e9f4;
+    -webkit-text-stroke: 0px #2e2e2e;
+    border-right: 2px solid #03e9f4;
+    overflow: hidden;
+    animation: animateTitle 4s linear infinite;
+}
+
+@keyframes animateTitle {
+    0%, 10%, 100% {
+        width: 0;
+    }
+    70%, 90% {
+        width: 100%;
+    }
 }
 
 .container {
