--- a/style.css
+++ b/style.css
@@ -1,103 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
   display: flex;
+  padding: 20px;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
   background-color: black;
   overflow: hidden;
 }
 
-h1 {
-    position: absolute;
-    top: 0;
-    font-size: 2rem;
-    color: black;
-    -webkit-text-stroke: 1px #2e2e2e;
+header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 200px;
+  height: 10vh;
+  width: 100%;
 }
 
-h1::before {
-    content: attr(data-text);
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rotating_cube {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  transform-style: preserve-3d;
+  animation: animateRotatingCube 4s linear infinite;
+}
+@keyframes animateRotatingCube {
+  0% {
+    transform: rotateX(-30deg) rotateY(0deg);
+  }
+  100% {
+    transform: rotateX(-30deg) rotateY(360deg);
+  }
+}
+
+.rotating_cube div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.rotating_cube div span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#2e2e2e, #03e9f4);
+  transform: rotateY(calc(90deg * var(--i))) translateZ(20px);
+}
+
+.top {
     position: absolute;
     top: 0;
     left: 0;
-    width: 0%;
-    height: 100%;
-    color: #03e9f4;
-    -webkit-text-stroke: 0px #2e2e2e;
-    border-right: 2px solid #03e9f4;
-    overflow: hidden;
-    animation: animateTitle 4s linear infinite;
+    width: 40px;
+    height: 40px;
+    background: #2e2e2e;
+    transform: rotateX(90deg) translateZ(20px);
+}
+.top::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    background: #03e9f4;
+    transform: translateZ(-60px);
+    filter: blur(20px);
+    box-shadow: 0 0 1px rgba(3, 233, 244, 0.2),
+    0 0 2px rgba(3, 233, 244, 0.4),
+    0 0 3px rgba(3, 233, 244, 0.6), 
+    0 0 4px rgba(3, 233, 244, 0.8), 
+    0 0 1px rgba(3, 233, 244, 1),
+}
+
+h1 {
+  position: relative;
+  font-size: 2rem;
+  color: black;
+  -webkit-text-stroke: 1px #2e2e2e;
+}
+
+h1::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  color: #03e9f4;
+  -webkit-text-stroke: 0px #2e2e2e;
+  border-right: 2px solid #03e9f4;
+  overflow: hidden;
+  animation: animateTitle 4s linear infinite;
 }
 
 @keyframes animateTitle {
-    0%, 10%, 100% {
-        width: 0;
-    }
-    70%, 90% {
-        width: 100%;
-    }
+  0%,
+  10%,
+  100% {
+    width: 0;
+  }
+  70%,
+  90% {
+    width: 100%;
+  }
 }
 
 .container {
-    position: relative;
-    width: 100%;
-    transform: rotate(-25deg);
+  position: relative;
+  width: 100%;
+  transform: rotate(-25deg);
 }
 
 .container .box {
-    position: relative;
-    left: -200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc(100% + 400px);
-    height: 200px;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
-    animation: animateSurface 1.5s ease-in-out infinite;
+  position: relative;
+  left: -200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% + 400px);
+  height: 200px;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+  animation: animateSurface 1.5s ease-in-out infinite;
 }
 @keyframes animateSurface {
-    0% {
-        transform: translateX(0px);
-    }
-    100% {
-        transform: translateX(-200px);
-    }
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-200px);
+  }
 }
 
 .container .box .cube {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    background-color: #03e9f4;
-    box-shadow: 0 0 5px rgba(3, 233, 244, 1),
-     0 0 25px rgba(3, 233, 244, 1), 
-     0 0 50px rgba(3, 233, 244, 1),
-     0 0 100px rgba(3, 233, 244, 1),
-     0 0 200px rgba(3, 233, 244, 0.5),
-     0 0 300px rgba(3, 233, 244, 0.5);
-     transform-origin: bottom right;
-     animation: animate 1.5s ease-in-out infinite;
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background-color: #03e9f4;
+  box-shadow: 0 0 5px rgba(3, 233, 244, 1), 0 0 25px rgba(3, 233, 244, 1),
+    0 0 50px rgba(3, 233, 244, 1), 0 0 100px rgba(3, 233, 244, 1),
+    0 0 200px rgba(3, 233, 244, 0.5), 0 0 300px rgba(3, 233, 244, 0.5);
+  transform-origin: bottom right;
+  animation: animate 1.5s ease-in-out infinite;
 }
-@keyframes animate 
-{
-    0%
-    {
-        transform: rotate(0deg);
-    }
-    60% {
-        transform: rotate(90deg);
-    }
-    100% {
-        transform: rotate(90deg);
-    }
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  60% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
 }
