--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   padding: 30px 40px;
   display: flex;
@@ -287,8 +288,51 @@ ul {
   margin-left: 6%;
 }
 
+@media (max-width: 992px) {
+  .container .hero h2 {
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 55px;
+  }
+  .container .hero h2 div p {
+    font-size: 0.7rem;
+    font-weight: 300;
+    line-height: 16px;
+    max-width: 300px;
+  }
+}
+@media (max-width: 575px) {
+  .container .hero h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 40px;
+  }
+  .container .hero h2 div p {
+    font-size: 0.6rem;
+    font-weight: 300;
+    line-height: 12px;
+    max-width: 220px;
+  }
+}
+
+@media (max-width: 400px) {
+  .container .hero h2 {
+    text-align: center;
+  }
+  .container .hero h2 .content-third-text{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+  }
+  .container .hero h2 .first-text, .third-text{
+    margin-left: 0;
+  }
+}
+
 
 .btn-scroll {
+  cursor: pointer;
   position: absolute;
   bottom: calc(5%);
   display: flex;
@@ -296,6 +340,10 @@ ul {
   align-items: center;
   border: 1px solid white;
   border-radius: 50%;
+}
+
+@media screen {
+  
 }
 
 
