--- a/style.css
+++ b/style.css
@@ -497,6 +497,21 @@ a {
   position: relative;
 }
 
+@media (max-width: 992px){
+  .container {
+    height: 90vh;
+  }
+
+  @media (max-width: 992px){
+    .container {
+      height: 90vh;
+    }
+    .slide {
+      height: 90vh;
+    }
+  }
+}
+
 
 /* -------------  Hero  -------------- */
 
